--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -6,15 +6,121 @@
 
 /* stili background boolzapp */
 
-.top-bar{
+.top-bar {
     height: 100px;
     background-color: #009688;
 }
 
-main{
+main {
     height: calc(100vh - 100px);
     background-color: #d9dbd4;
 }
 
 
 /* stili app */
+
+#app {
+    position: relative;
+}
+
+.container {
+    width: 80%;
+    margin: 0 auto;
+    height: 500px;
+    border: 1px solid black;
+    display: flex;
+    position: absolute;
+    top: 20px;
+    left: calc(50% - 40%);
+}
+
+/* stili nav */
+nav {
+    border: 1px solid black;
+    width: 900px;
+}
+
+/* stili mio profilo */
+
+.my-profile {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 10px;
+    background-color: #eaeaea;
+}
+
+.profile {
+    display: flex;
+    align-items: center;
+}
+
+
+.img {
+    width: 45px;
+}
+
+.img img {
+    width: 100%;
+}
+
+.my-profile .fa-solid{
+    color: #b0b0b0;
+    margin-left: 10px;
+
+}
+
+/* stili notifiche */
+
+.notifiche{
+    display: flex;
+    padding: 10px;
+    background-color: #8edafc;
+}
+.bell{
+    margin-right: 7px;
+}
+.fa-bell-slash{
+    font-size: 25px;
+    padding: 10px;
+    background-color: white;
+    color:#8edafc;
+    border-radius: 50%;
+}
+.notifiche a{
+    color: gray;
+}
+
+/* stili search */
+
+.search{
+    padding: 10px;
+    background-color: #eaeaea;
+}
+
+.search div{
+    border: 1px solid #cbc9c9;
+    border-radius: 10px;
+    display: flex;
+}
+
+.fa-magnifying-glass{
+    color: #b0b0b0;
+    width: 55px;
+    padding: 10px;
+    background-color: white;
+}
+
+.search input{
+    padding: 10px;
+    border: none;
+    width: 100%;
+}
+
+
+/* stili area messaggi */
+
+.text-message {
+    border: 1px solid black;
+    width: 100%;
+}
